<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <GVL Name="GVL" Id="{8be29a55-f95b-0019-032e-27be63ad623d}">
    <Declaration><![CDATA[
VAR_GLOBAL
	g_fbArbiter1	:	FB_Arbiter;
	g_fbArbiter2	:	FB_Arbiter;
	{attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 1^Output'}
	g_FastFaultOutput1	:	FB_HardwareFFOutput;
	g_rTestingVelocity	:	LREAL := VISIBLE_TEST_VELOCITY;
	g_fbFFRegistry	:	FB_UsualSuspects;
END_VAR

VAR_GLOBAL CONSTANT
	EXCLUDED_ASSERTION_ID	:	UDINT	:= 16#FFFFFFFF; //An assertion ID that should always return "not found" in the assertion pool
	VISIBLE_TEST_VELOCITY	:	LREAL	:= 10;
	FAST_TEST_VELOCITY		:	LREAL	:= 100;
	MAX_DEVICE_STATES		:	UDINT	:= 300;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>